add an index.html that displays all charts
target `benchmarks` now generates an `index.html` within its binary
directory that displays all charts in a grid.

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -171,13 +171,27 @@ if(HAS_FTEMPLATE_DEPTH)
     add_compile_options(${cxx_flag})
 endif()
 
-add_custom_target(benchmarks)
-
 file(GLOB benchmark_dirs
     LIST_DIRECTORIES true
     RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
     "hetero/*" "type/*"
 )
+
+set(WEB_DIR_PATH "${CMAKE_CURRENT_SOURCE_DIR}/web")
+set(INDEX_HTML_ERB_PATH "${CMAKE_CURRENT_SOURCE_DIR}/index.html.erb")
+set(index_html_path "${CMAKE_CURRENT_BINARY_DIR}/index.html")
+add_custom_command(
+        OUTPUT "${index_html_path}"
+        COMMAND ${RUBY_EXECUTABLE} -r erb
+            -e "benchmarks = '${benchmark_dirs}'.split(';').map { |benchmark| benchmark + '/index.html' }"
+            -e "html = ERB.new(File.read('${INDEX_HTML_ERB_PATH}')).result(binding)"
+            -e "IO.write('${index_html_path}', html)"
+        COMMAND ${CMAKE_COMMAND} -E copy_directory "${WEB_DIR_PATH}" "${CMAKE_CURRENT_BINARY_DIR}/web"
+        DEPENDS "${WEB_DIR_PATH}" "${INDEX_HTML_ERB_PATH}"
+        VERBATIM
+    )
+
+add_custom_target(benchmarks DEPENDS "${index_html_path}")
 
 foreach(benchmark_dir ${benchmark_dirs})
     add_subdirectory(${benchmark_dir})
