--- a/benchmark/type/at/CMakeLists.txt
+++ b/benchmark/type/at/CMakeLists.txt
@@ -13,5 +13,5 @@ add_dataset(datasets dataset.type.at.metal.list     metal.list.cpp.erb      "(1.
 add_dataset(datasets dataset.type.at.mpl.list       mpl.list.cpp.erb        "(1..50).step(5)")
 add_dataset(datasets dataset.type.at.mpl.vector     mpl.vector.cpp.erb      "(1..50).step(5)")
 
-metabench_add_benchmark(benchmark.type.at DATASETS ${datasets})
+metabench_add_benchmark(benchmark.type.at DATASETS ${datasets} FILENAME index)
 add_dependencies(benchmarks benchmark.type.at)
