--- a/benchmark/hetero/transform/CMakeLists.txt
+++ b/benchmark/hetero/transform/CMakeLists.txt
@@ -11,5 +11,5 @@ add_dataset(datasets dataset.hetero.transform.fusion.vector    fusion.vector.cpp
 add_dataset(datasets dataset.hetero.transform.hana.basic_tuple hana.basic_tuple.cpp.erb   "(1..500).step(10)")
 add_dataset(datasets dataset.hetero.transform.hana.tuple       hana.tuple.cpp.erb         "(1..500).step(10)")
 
-metabench_add_benchmark(benchmark.hetero.transform DATASETS ${datasets})
+metabench_add_benchmark(benchmark.hetero.transform DATASETS ${datasets} FILENAME index)
 add_dependencies(benchmarks benchmark.hetero.transform)
