--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -177,22 +177,7 @@ file(GLOB benchmark_dirs
     "hetero/*" "type/*"
 )
 
-set(INDEX_HTML_ERB_PATH "${CMAKE_CURRENT_SOURCE_DIR}/index.html.erb")
-set(index_html_path "${CMAKE_CURRENT_BINARY_DIR}/index.html")
-add_custom_command(OUTPUT "${index_html_path}"
-    COMMAND ${RUBY_EXECUTABLE} -r erb
-        -e "benchmarks = '${benchmark_dirs}'.split(';').map { |b|               "
-        -e "    {section: b =~ /hetero/ ? 'hetero' : 'type',                    "
-        -e "     path: b + '/index.html'}                                       "
-        -e "}                                                                   "
-        -e "html = ERB.new(File.read('${INDEX_HTML_ERB_PATH}')).result(binding) "
-        -e "IO.write('${index_html_path}', html)                                "
-    DEPENDS "${INDEX_HTML_ERB_PATH}"
-    VERBATIM
-)
-
-add_custom_target(benchmarks DEPENDS "${index_html_path}")
-
+add_custom_target(benchmarks)
 foreach(benchmark_dir ${benchmark_dirs})
     add_subdirectory(${benchmark_dir})
 endforeach()
