Workaround issue with relative URLs and redirects
Basically, since I'm redirecting ldionne.github.io to ldionne.com,
ldionne.github.io/metabench is redirected to ldionne.com/metabench.
If we use the `/` baseurl for relative links, we'll end up with
`ldionne.com/relative/link` instead of `ldionne.com/metabench/relative/link`,
which is wrong. By prepending relative links with `site.baseurl`,
we can make sure the link is resolved properly.

This requires using `jekyll serve --baseurl ''` when testing the site
locally.

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: Metabench
 email: ldionne.2@gmail.com
 description: "A collection of metaprogramming benchmarks."
 url: "http://ldionne.github.io/metabench"
+baseurl: "/metabench"
 
 collections:
   hetero:
