--- a/.travis.yml
+++ b/.travis.yml
@@ -55,9 +55,6 @@ env:
     - BENCHMARK=true COMPILER=g++-4.8     CMAKE_GENERATOR="Unix Makefiles"
     - BENCHMARK=true COMPILER=g++-4.9     CMAKE_GENERATOR="Unix Makefiles"
 
-    # Update the gh-pages site (will be done by benchmark jobs in the future)
-    - GH_PAGES=true COMPILER=clang++-3.8 CMAKE_GENERATOR="Unix Makefiles"
-
 before_install:
   - export CXX=${COMPILER} # Override CXX set by Travis
 
@@ -125,20 +122,18 @@ script:
   # We update the gh-pages branch with the freshly generated benchmark data,
   # but not if this is a pull request or another branch than 'master'.
   - |
-    if [[ "${GH_PAGES}" == "true" && "${TRAVIS_PULL_REQUEST}" == "false" && "${TRAVIS_BRANCH}" == "master" ]]; then
-      cmake --build build --target benchmarks # Generate the benchmarks
-
+    if [[ "${BENCHMARK}" == "true" && "${TRAVIS_PULL_REQUEST}" == "false" && "${TRAVIS_BRANCH}" == "master" ]]; then
       # Suppress output to avoid leaking the token when the command fails
       git clone https://ldionne:${GITHUB_TOKEN}@github.com/ldionne/metabench --depth 1 --branch=gh-pages tmp &>/dev/null
       for collection in hetero type; do
-        rm -rf tmp/_${collection}
-        mkdir -p tmp/_${collection}
+        rm -rf tmp/_${collection}/${COMPILER}
+        mkdir -p tmp/_${collection}/${COMPILER}
         for chart in build/benchmark/${collection}/**/*.html; do
           # Add a YAML front matter for Jekyll and copy the file to gh-pages.
           (echo "---"; echo "---") > ${chart}.tmp
           cat ${chart} >> ${chart}.tmp
           mv ${chart}.tmp ${chart}
-          cp ${chart} tmp/_${collection}
+          cp ${chart} tmp/_${collection}/${COMPILER}
         done
       done
 
