[Travis] Temporarily disable Clang 3.8
Otherwise, the build fails because of https://github.com/travis-ci/apt-source-whitelist/pull/255

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,8 +40,8 @@ env:
     - COMPILER=clang++-3.6 CMAKE_GENERATOR="Unix Makefiles"
     - COMPILER=clang++-3.7 CMAKE_GENERATOR="Ninja"
     - COMPILER=clang++-3.7 CMAKE_GENERATOR="Unix Makefiles"
-    - COMPILER=clang++-3.8 CMAKE_GENERATOR="Ninja"
-    - COMPILER=clang++-3.8 CMAKE_GENERATOR="Unix Makefiles"
+    # - COMPILER=clang++-3.8 CMAKE_GENERATOR="Ninja"
+    # - COMPILER=clang++-3.8 CMAKE_GENERATOR="Unix Makefiles"
     - COMPILER=g++-4.8     CMAKE_GENERATOR="Ninja"
     - COMPILER=g++-4.8     CMAKE_GENERATOR="Unix Makefiles"
     - COMPILER=g++-4.9     CMAKE_GENERATOR="Ninja"
