--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ addons:
       - ubuntu-toolchain-r-test
       - llvm-toolchain-precise-3.6
       - llvm-toolchain-precise-3.7
-      # - llvm-toolchain-precise-3.8 <- Not whitelisted yet
+      - llvm-toolchain-precise-3.8
       - llvm-toolchain-precise
 
 env:
@@ -40,8 +40,8 @@ env:
     - COMPILER=clang++-3.6 CMAKE_GENERATOR="Unix Makefiles"
     - COMPILER=clang++-3.7 CMAKE_GENERATOR="Ninja"
     - COMPILER=clang++-3.7 CMAKE_GENERATOR="Unix Makefiles"
-    # - COMPILER=clang++-3.8 CMAKE_GENERATOR="Ninja"
-    # - COMPILER=clang++-3.8 CMAKE_GENERATOR="Unix Makefiles"
+    - COMPILER=clang++-3.8 CMAKE_GENERATOR="Ninja"
+    - COMPILER=clang++-3.8 CMAKE_GENERATOR="Unix Makefiles"
     - COMPILER=g++-4.8     CMAKE_GENERATOR="Ninja"
     - COMPILER=g++-4.8     CMAKE_GENERATOR="Unix Makefiles"
     - COMPILER=g++-4.9     CMAKE_GENERATOR="Ninja"
