Use a median-of-3 approach for gathering MPL and Fusion benchmarks

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -118,50 +118,52 @@ if (METABENCH_METAL)
 endif()
 
 macro(add_dataset datasets dataset path_to_template range)
-    set(_enabled OFF)
-    unset(_dependency)
+    string(REGEX REPLACE "[^.]+[.][^.]+[.][^.]+[.](.*)" "\\1" name ${dataset})
+
     if(${dataset} MATCHES "brigand\\.")
-        if (NOT (${CXX_STANDARD} LESS 2011))
-            set(_enabled ${METABENCH_BRIGAND})
-            set(_dependency Brigand)
+        if (NOT (${CXX_STANDARD} LESS 2011) AND ${METABENCH_BRIGAND})
+            metabench_add_dataset(${dataset} ${path_to_template} ${range} NAME ${name})
+            add_dependencies(${dataset} Brigand)
+            list(APPEND ${datasets} ${dataset})
         endif()
     elseif(${dataset} MATCHES "fusion\\.")
-        set(_enabled ${METABENCH_FUSION})
+        if (${METABENCH_FUSION})
+            metabench_add_dataset(${dataset} ${path_to_template} ${range} NAME ${name} MEDIAN_OF 3)
+            list(APPEND ${datasets} ${dataset})
+        endif()
     elseif(${dataset} MATCHES "hana\\.")
-        if (NOT (${CXX_STANDARD} LESS 2014))
-            set(_enabled "${METABENCH_HANA}")
-            set(_dependency Hana)
+        if (NOT (${CXX_STANDARD} LESS 2014) AND ${METABENCH_HANA})
+            metabench_add_dataset(${dataset} ${path_to_template} ${range} NAME ${name})
+            add_dependencies(${dataset} Hana)
+            list(APPEND ${datasets} ${dataset})
         endif()
     elseif(${dataset} MATCHES "meta\\.")
-        if (NOT (${CXX_STANDARD} LESS 2011))
-            set(_enabled ${METABENCH_META})
-            set(_dependency Meta)
+        if (NOT (${CXX_STANDARD} LESS 2011) AND ${METABENCH_META})
+            metabench_add_dataset(${dataset} ${path_to_template} ${range} NAME ${name})
+            add_dependencies(${dataset} Meta)
+            list(APPEND ${datasets} ${dataset})
         endif()
     elseif(${dataset} MATCHES "metal\\.")
-        if (NOT (${CXX_STANDARD} LESS 2011))
-            set(_enabled ${METABENCH_METAL})
-            set(_dependency Metal)
+        if (NOT (${CXX_STANDARD} LESS 2011) AND ${METABENCH_METAL})
+            metabench_add_dataset(${dataset} ${path_to_template} ${range} NAME ${name})
+            add_dependencies(${dataset} Metal)
+            list(APPEND ${datasets} ${dataset})
         endif()
     elseif (${dataset} MATCHES "mpl\\.")
-        set(_enabled ${METABENCH_MPL})
+        if (${METABENCH_MPL})
+            metabench_add_dataset(${dataset} ${path_to_template} ${range} NAME ${name} MEDIAN_OF 3)
+            list(APPEND ${datasets} ${dataset})
+        endif()
     elseif (${dataset} MATCHES "std\\.")
         if (NOT (${CXX_STANDARD} LESS 2011))
-            set(_enabled ON)
+            metabench_add_dataset(${dataset} ${path_to_template} ${range} NAME ${name})
+            list(APPEND ${datasets} ${dataset})
         endif()
     else()
         message(FATAL_ERROR
             "The dataset named '${dataset}' does not appear to benchmark any "
             "known metaprogramming library."
         )
-    endif()
-
-    if (_enabled)
-        string(REGEX REPLACE "[^.]+[.][^.]+[.][^.]+[.](.*)" "\\1" name ${dataset})
-        metabench_add_dataset(${dataset} ${path_to_template} ${range} NAME ${name})
-        list(APPEND ${datasets} ${dataset})
-        if (_dependency)
-            add_dependencies(${dataset} ${_dependency})
-        endif()
     endif()
 endmacro()
 
