--- a/benchmark/hetero/make/CMakeLists.txt
+++ b/benchmark/hetero/make/CMakeLists.txt
@@ -9,5 +9,5 @@ add_dataset(datasets dataset.hetero.make.hana.basic_tuple hana.basic_tuple.cpp.e
 add_dataset(datasets dataset.hetero.make.hana.tuple       hana.tuple.cpp.erb          "(0..500).step(10)")
 add_dataset(datasets dataset.hetero.make.std.tuple        std.tuple.cpp.erb           "(0..100).step(10)")
 
-metabench_add_benchmark(benchmark.hetero.make DATASETS ${datasets} OUTPUT index)
+metabench_add_benchmark(benchmark.hetero.make DATASETS ${datasets} OUTPUT index.html)
 add_dependencies(benchmarks benchmark.hetero.make)
